--- a/public/css/widget.css
+++ b/public/css/widget.css
@@ -1,4 +1,45 @@
+body {
+    font-family: Arial, Helvetica, sans-serif;    
+    height: 350px;
+}
+
 h1 {
     font-size:24px;
-    color:blue;
+    color:blue;    
+}
+
+p {
+    font-size: 12px;    
+}
+.container {
+    display:flex;
+}
+
+.container__ref {
+    float:left;
+    
+}
+
+.container__rec {
+    flex: 3;
+    display: flex;
+    border-left: 1px solid #eee;
+    overflow:auto;
+}
+
+div {
+    width: 200px;
+    padding: 5px;
+}
+
+.name {
+    height: 50px;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;    
+    color: #464633;
+}
+
+.price {
+    color:red;
 }
