--- a/public/css/widget.css
+++ b/public/css/widget.css
@@ -3,8 +3,10 @@ body {
 }
 
 h1 {
-    font-size:24px;
+    font-size:18px;
     color:#006699;  
+    line-height: 0.5;
+    margin-left: 10px;
 }
 
 header {
@@ -12,59 +14,87 @@ header {
 } 
 
 p {
-    font-size: 12px;    
+    font-size: 11px;    
 }
 
 span {
     font-size: 16px;
     font-weight: bold;
 }
+
 .container {
    margin: 8px;
+   display: grid;
+   grid-template-columns: 200px auto;
+   grid-template-rows: 400px;
 }
 
 .container__ref {
-    float: left; 
-    box-sizing: border-box;
-  
+    grid-column: 1;
+    grid-row: 1;    
+    display:grid;
+    grid-template-columns: 1;
+    grid-template-rows: 40px auto;
+    
 }
 
 .container__rec {
-    margin-left:200px;   
+    grid-column: 2;
+    grid-row: 1; 
     overflow:hidden;     
+    display:grid;
+    grid-template-columns: 50px 200px 200px 200px 200px 200px 50px;
+    grid-template-rows: 40px auto;
+}
+
+.container__rec header {
+    grid-row:1;
+    grid-column: 1/8;
+}
+
+.container__ref header {
+    grid-row:1;
+    grid-column: 1;
 }
 
 #recommendations {
-    display: flex;
+    grid-column: 2/7;
+    grid-row: 2;  
+    display:flex;
+    overflow:hidden;  
 }
 
-div {
-    width: 200px;
-    padding: 8px;
-    box-sizing: border-box;
-    
+.product {
+    padding: 20px;
+    flex-basis: 200px;
+}
+
+.product:disabled {
+    display: none;
 }
 
 .btn-left {
     font-size: 32px;    
     border: none;    
     background: transparent;
+    grid-column: 1;
+    grid-row: 2;
 }
 
 .btn-right {
     font-size: 32px;
     border: none;
     background: transparent;
+    grid-column: 7;
+    grid-row: 2;
 }
 
-.name {
-    height: 50px;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    overflow: hidden;    
-    color: #464633;
+.name {     
+    color: #333;
 }
 
 .price {
     color:#cf0000;
+    line-height:0.3;
 }
+
