--- a/public/css/widget.css
+++ b/public/css/widget.css
@@ -2,6 +2,10 @@ body {
     font-family: Arial, Helvetica, sans-serif;        
 }
 
+a {
+    text-decoration: none;
+}
+
 h1 {
     font-size:18px;
     color:#006699;  
@@ -69,6 +73,9 @@ span {
     flex-basis: 200px;
 }
 
+.product:hover {
+    background: linear-gradient(#e5f1fb,#fff);
+}
 
 .btn-left {
     font-size: 32px;    
